fix: shift homepage content higher on page

--- a/_styl/pages/home.styl
+++ b/_styl/pages/home.styl
@@ -3,4 +3,5 @@
 --------------------------------------------------------------------*/
 
 body.home
-  align-items: center
+  align-items: start
+  padding-top: 8vh
